Border for arrows removed

--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body::before {
   padding: 20px;
   font-size: 30px;
   color: white;
-  border: 2px solid #eee;
+  border: 0;
   top: 50%;
   transform: translateY(-50%);
   cursor: pointer;
